Added test cases and sonar qubee integrations